feat: add JUnit tests