@@ -1,12 +1,12 @@
 plugins {
     id "java"
-    id "groovy"
     id "idea"
     id "org.springframework.boot" version "${springBootVersion}"
     id "io.spring.dependency-management" version "${dependencyManagementVersion}"
     id "org.eclipse.jkube.kubernetes" version "${jkubeVersion}"
     id "com.avast.gradle.docker-compose" version "0.16.8"
     id "com.diffplug.spotless" version "${spotlessVersion}"
+    id "jacoco"
 }
 
 repositories {
@@ -19,12 +19,6 @@ spotless {
     java {
         googleJavaFormat()
         trimTrailingWhitespace()
-        endWithNewline()
-    }
-
-    groovy {
-        trimTrailingWhitespace()
-        indentWithSpaces(4)
         endWithNewline()
     }
 
@@ -46,8 +40,8 @@ spotless {
 }
 
 sourceCompatibility = "17"
-[compileJava, compileTestJava, compileGroovy, compileTestGroovy]*.options*.encoding = "UTF-8"
-[compileJava, compileTestJava, compileGroovy, compileTestGroovy]*.options*.compilerArgs = ["--enable-preview", "-Xlint:all"]
+[compileJava, compileTestJava]*.options*.encoding = "UTF-8"
+[compileJava, compileTestJava]*.options*.compilerArgs = ["-Xlint:all"]
 
 dependencies {
     compileOnly "org.projectlombok:lombok"
@@ -86,20 +80,15 @@ dependencies {
     testImplementation "org.springframework.boot:spring-boot-starter-test"
     testImplementation "org.springframework.boot:spring-boot-starter-data-r2dbc"
     testImplementation "org.springframework.security:spring-security-test"
-    testImplementation "org.spockframework:spock-spring:${spockVersion}"
     testImplementation "io.projectreactor:reactor-test"
     testImplementation "com.h2database:h2"
+    testImplementation "org.testcontainers:junit-jupiter:1.17.3"
+    testImplementation "org.testcontainers:r2dbc:1.17.3"
+    testImplementation "org.testcontainers:mysql:1.17.3"
     testImplementation "io.r2dbc:r2dbc-h2"
 
     testImplementation "org.assertj:assertj-core"
-    testImplementation "org.codehaus.groovy:groovy"
-    testImplementation platform("org.spockframework:spock-bom:${spockVersion}")
-    testImplementation "org.spockframework:spock-core"
     testImplementation "org.mockito:mockito-core"
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += "--enable-preview"
 }
 
 tasks.named("test") {
